--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <!-- /Libraries -->
 
 <!-- Components -->
-	<script type="text/javascript" src="scripts/components/index.js"></script>
-	<script type="text/javascript" src="scripts/components/dashboard.js"></script>
+	<script type="text/javascript" src="app/scripts/components/nav.js"></script>
 <!-- /Components -->
+
+<!-- Pages -->
+	<script type="text/javascript" src="app/pages/index.js"></script>
+	<script type="text/javascript" src="app/pages/dashboard.js"></script>
+<!-- /Pages -->
 
 <!-- Main Scripts -->
 	<script type="text/javascript" src="scripts/main.js"></script>
